# Ecommerce

./: AUTHORIZATION_ISSUES.md  GATEWAY_AUTHORIZATION_ANALYSIS.md
analytic-service/: Dockerfile  docker-compose.yml  entrypoint.sh  main.py  requirements.txt
analytic-service/analitic/: models.py  product_client.py  serializers.py  urls.py  views.py
analytic-service/config/: authentication.py  urls.py  (+1 more)
elasticsearch-service/: .env  Dockerfile  consumer.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  setup-kibana-password.sh
elasticsearch-service/elastic/: consumer.py  documents.py  main.py  models.py
elasticsearch-service/elasticsearch/: consumer.py  documents.py  logging_config.py  main.py  models.py
gateway-service/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
gateway-service/gateway/: auth.py  forward.py  logging.py  main.py  middleware.py  openapi.py  redis_client.py  schemas.py  services.py
order-service/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
product-service/: Dockerfile  docker-compose.yaml  pyproject.toml
rabbitmq-service/: .env  docker-compose.yml
redis-service/: docker-compose.yml
shop-service/: docker-compose.yml  entrypoint.sh  pyproject.toml
shopcart-service/: .gitignore  docker-compose.yaml  entrypoint.sh  pyproject.toml
traefik-service/: docker-compose.yml
user-service/: README.md  docker-compose.yml  dockerfile  pyproject.toml
wishlist-service/: .env.local  Dockerfile  alembic.ini  consumer.py  docker-compose.yml  entrypoint.sh  requirements.txt
(+82 files in other folders)
