[project]
name = "elasticsearch-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=9.2.0",
    "fastapi>=0.121.1",
    "pika>=1.3.2",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]
