[project]
name = "elasticsearch-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.8",
    "dotenv>=0.9.9",
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.121.1",
    "pika>=1.3.2",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]
